tests/paczka1/small_fuzzy/68914616.err
Error in line 1: 178rSbP S691 50,9
Error in line 5: CevrdYgV S144 65,0
Error in line 3: AQ4R8WVfLRk S144 0,3
Error in line 12: AQ4R8WVfLRk S691 89,5
Error in line 4: G9n A568 79,2
